migrate to github actions

--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -4,6 +4,7 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    container: golang:1.23-bookworm
     steps:
       - run: make setup
       - run: make install
